# py.package

./: MANIFEST.in  README.md  requeriments.txt  setup.cfg
src/saludador/launcher/: __init__.py  __main__.py
src/saludador/modules/examples/: __init__.py  saludador.py
src/saludador/modules/files/: __init__.py  archivos.py
src/saludador/resources/textos/: archivo.txt
