[metadata]
name = saluda
version = 1.0.0
author = Jaime A. Feldman
author_email = jaimefel@gmail.com
description = Proyecto de pruebas para ir aprendiendo Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaimefeldman/porj.ejemplos
project_urls =
    Bug Tracker = https://github.com/jaimefeldman/porj.ejemplos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux


[options]
package_dir =
    = src
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires = 
    termcolor>=2.3.0

[options.entry_points]
console_scripts = 
    saluda = saludador.launcher.__main__:main 

[options.packages.find]
where = src
